# R-shellcode

./: .gitignore  .gitmodules  Cargo.toml  README.md  cut.py  hex.py
.cargo/: config.toml
run_shellcode/: .gitignore  Cargo.toml
run_shellcode/src/: main.rs  utils.rs
shellcode/: .justfile  Cargo.toml  LICENSE  shellcode.rs
shellcode/.cargo/: config.toml
shellcode/src/: bind.rs  main.rs  utils.rs
