[workspace]
members = ["run_shellcode"]
package.authors = ["wind_mask"]
package.license = "MIT"
package.repository = ""
resolver = "2"
exclude = ["shellcode"]
[profile.dev]
opt-level = 0
debug = true
debug-assertions =  true
lto = false
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
