[package]
name = "shellcode"
version = "0.1.0"
edition = "2021"
authors = ["wind_mask"]
license = "MIT"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
opt-level = "z"   # Optimize for size.
lto = "fat"
strip = true      # Automatically strip symbols from the binary.
codegen-units = 1
debug = false
